[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scripts/Map.gd" type="Script" id=2]
[ext_resource path="res://assets/terrain.png" type="Texture" id=3]
[ext_resource path="res://scripts/TileMap.gd" type="Script" id=4]
[ext_resource path="res://assets/terrain_overlay.png" type="Texture" id=5]
[ext_resource path="res://assets/hover-hex.png" type="Texture" id=6]
[ext_resource path="res://scripts/UnitManager.gd" type="Script" id=7]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 0, 36, 18, 0, 54, 0, 72, 36, 54, 72, 18, 72 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5 ) ]

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 0, 36, 18, 0, 54, 0, 72, 36, 54, 72, 18, 72 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5 ) ]

[sub_resource type="NavigationPolygon" id=3]
vertices = PoolVector2Array( 0, 36, 18, 0, 54, 0, 72, 36, 54, 72, 18, 72 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5 ) ]

[sub_resource type="NavigationPolygon" id=4]
vertices = PoolVector2Array( 0, 36, 18, 0, 54, 0, 72, 36, 54, 72, 18, 72 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5 ) ]

[sub_resource type="TileSet" id=5]
0/name = "terrain.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 72, 72 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/navigation = SubResource( 1 )
0/shapes = [  ]
0/z_index = 0
1/name = "terrain.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 72, 0, 72, 72 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/navigation = SubResource( 2 )
1/shapes = [  ]
1/z_index = 0
2/name = "terrain.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 144, 0, 72, 72 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/navigation = SubResource( 3 )
2/shapes = [  ]
2/z_index = 0
3/name = "terrain.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 216, 0, 72, 72 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/navigation = SubResource( 4 )
3/shapes = [  ]
3/z_index = 0
4/name = "terrain.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 72, 72, 72 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "terrain.png 5"
5/texture = ExtResource( 3 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 144, 144, 72, 72 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0
6/name = "terrain.png 6"
6/texture = ExtResource( 3 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 72, 144, 72, 72 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 0

[sub_resource type="TileSet" id=6]
0/name = "red"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 72, 72 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "blue"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 72, 0, 72, 72 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "yellow"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 144, 0, 72, 72 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Map" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="Map"]
tile_set = SubResource( 5 )
cell_size = Vector2( 54, 72 )
cell_half_offset = 1
format = 1
tile_data = PoolIntArray( 0, 0, 131074, 1, 0, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 6, 0, 6, 5, 0, 7, 5, 0, 8, 5, 0, 9, 5, 0, 10, 5, 0, 11, 5, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 65536, 0, 65537, 65537, 0, 0, 65538, 0, 0, 65539, 5, 0, 65540, 5, 0, 65541, 6, 0, 65542, 2, 0, 65543, 2, 0, 65544, 5, 0, 65545, 5, 0, 65546, 5, 0, 65547, 5, 0, 65548, 5, 0, 65549, 3, 0, 65550, 3, 0, 65551, 5, 0, 65552, 0, 0, 65553, 3, 0, 65554, 3, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 3, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 0, 0, 131082, 2, 0, 131083, 0, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 5, 0, 131088, 1, 0, 131089, 3, 0, 131090, 3, 0, 196608, 0, 0, 196609, 5, 0, 196610, 0, 0, 196611, 3, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 6, 0, 196616, 2, 0, 196617, 0, 0, 196618, 2, 0, 196619, 0, 0, 196620, 0, 0, 196621, 3, 0, 196622, 0, 0, 196623, 5, 0, 196624, 1, 0, 196625, 0, 0, 196626, 3, 0, 262144, 0, 0, 262145, 5, 0, 262146, 0, 0, 262147, 3, 0, 262148, 2, 0, 262149, 6, 0, 262150, 6, 0, 262151, 6, 0, 262152, 6, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 6, 0, 262161, 6, 0, 262162, 0, 0, 327680, 1, 0, 327681, 1, 0, 327682, 5, 0, 327683, 3, 0, 327684, 2, 0, 327685, 2, 0, 327686, 6, 0, 327687, 6, 0, 327688, 6, 0, 327689, 6, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 5, 0, 327695, 6, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 0, 0, 393221, 1, 0, 393222, 1, 0, 393223, 5, 0, 393224, 0, 0, 393225, 0, 0, 393226, 6, 0, 393227, 0, 0, 393228, 5, 0, 393229, 6, 0, 393230, 0, 0, 393231, 0, 0, 393232, 6, 0, 393233, 0, 0, 393234, 0, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0 )
script = ExtResource( 4 )

[node name="TileMapOverlay" type="TileMap" parent="Map"]
z_index = 1
z_as_relative = false
tile_set = SubResource( 6 )
cell_size = Vector2( 54, 72 )
cell_half_offset = 1
format = 1

[node name="HoverHex" type="Sprite" parent="Map"]
visible = false
texture = ExtResource( 6 )

[node name="SelectedHex" type="Sprite" parent="Map"]
visible = false
texture = ExtResource( 6 )

[node name="CombatManager" type="Node" parent="."]

[node name="UnitManager" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Distance_Label" type="Label" parent="."]
visible = false
margin_left = 135.0
margin_top = 125.0
margin_right = 363.0
margin_bottom = 161.0
size_flags_vertical = 0
custom_colors/font_color = Color( 0.988235, 0.988235, 0.988235, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="Button" type="Button" parent="."]
margin_left = 11.0
margin_top = 11.0
margin_right = 102.0
margin_bottom = 36.0
text = "Next Turn"
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
